# oop_SFML_greedy_snake

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/element/: Button.cpp  Fruit.cpp  Fruit.h  OptionButton.cpp  Snake.cpp  Snake.h  TitleSprite.cpp
src/screen/: AboutScreen.cpp  AboutScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  HelpScreen.cpp  HelpScreen.h  MenuScreen.cpp  MenuScreen.h  OptionScreen.cpp  PauseScreen.cpp  PauseScreen.h
